--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rob Roman</title>
+  <meta charset="UTF-8">
+  <title>Rob Roman – Diesel Titan</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>About Me</h1>
-    <p>Welcome to my personal website!</p>
+  <canvas id="particles"></canvas>
 
-<<<<<<< HEAD
-    <h2>Work History</h2>
-    <p>Here you can read about my work experience...</p>
-=======
   <header class="hero">
     <div class="container">
       <h1 class="glitch" data-text="Rob Roman">Rob Roman</h1>
@@ -29,12 +26,52 @@
       <li>Ultrashift / Endurant</li><li>DD13 / ISX15</li><li>OSHA 10</li>
     </ul>
   </section>
->>>>>>> parent of e51ab37 (Update index.html)
 
-    <h2>Projects</h2>
-    <p>Details about projects I’ve worked on...</p>
+  <section id="timeline" class="section">
+    <h2>War Record</h2>
+    <div class="timeline">
+      <div class="event" data-year="2021-25">
+        <h3>FedEx Freight – Fleet Maintenance Titan</h3>
+        <p>Kept 300+ Class-8 wolves alive: engines, transmissions, air systems, doors, diffs.</p>
+      </div>
+      <div class="event" data-year="2019-21">
+        <h3>Fred Martin Ford – Flat-Rate Gunslinger</h3>
+        <p>Gas & diesel cars / medium-duty. Zero comebacks.</p>
+      </div>
+      <div class="event" data-year="2018-19">
+        <h3>Boardman Twp – Public-Safety Guardian</h3>
+        <p>Fabricated custom rigs for police & fire. Downtime = 0.</p>
+      </div>
+      <div class="event" data-year="2015-18">
+        <h3>Taylor Kia – From Lube to A-level Tech</h3>
+        <p>Climbed the rack in a high-volume dealership.</p>
+      </div>
+      <div class="event" data-year="2015-∞">
+        <h3>Self-Employed – Mobile Diesel Mercenary</h3>
+        <p>Midnight rescues, on-site welding, customers for life.</p>
+      </div>
+    </div>
+  </section>
 
-    <h2>Contact Me</h2>
-    <p>Feel free to reach out!</p>
+  <section id="contact" class="section">
+    <h2>Light the Beacon</h2>
+    <form action="https://formspree.io/f/your-form-id" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" placeholder="What broke?" required></textarea>
+      <button class="btn" type="submit">Send S.O.S.</button>
+    </form>
+    <div class="contact-badges">
+      <a href="mailto:ytowndown616@gmail.com">📧 ytowndown616@gmail.com</a>
+      <a href="tel:3303330016">📞 330-333-0016</a>
+      <span>📍 Youngstown, OH — Will travel</span>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; <span id="year"></span> Rob Roman — Built with diesel & midnight oil</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
