--- a/index.html
+++ b/index.html
@@ -18,14 +18,49 @@
     </div>
   </header>
 
-  <section id="skills" class="section">
-    <h2>Tool Arsenal</h2>
-    <ul class="skills-list">
-      <li>Cummins INSITE</li><li>Eaton ServiceRanger</li><li>Bendix ACOM</li>
-      <li>MIG / ARC / TIG</li><li>Plasma Cutting</li><li>Fabrication</li>
-      <li>Ultrashift / Endurant</li><li>DD13 / ISX15</li><li>OSHA 10</li>
-    </ul>
-  </section>
+ <!-- =========  SKILLS  ========= -->
+<section id="skills" class="section">
+  <h2>Skills</h2>
+  <ul class="skills">
+    <li>Alignment</li>
+    <li>Automotive Diagnostics</li>
+    <li>Fabrication</li>
+    <li>Gas Welding</li>
+    <li>Brazing</li>
+    <li>MIG Welding</li>
+    <li>ARC Welding</li>
+    <li>Soldering</li>
+    <li>Plasma Cutting</li>
+    <li>CNC</li>
+    <li>Machining & Measurement</li>
+    <li>Auto A/C Repair</li>
+    <li>Diesel Engine Repair</li>
+    <li>Fleet Maintenance</li>
+    <li>Preventive Maintenance</li>
+    <li>Diagnostic Repair Software</li>
+    <li>Cummins Insite</li>
+    <li>Eaton Service Ranger</li>
+    <li>Bendix ACOM</li>
+    <li>Electrical Experience</li>
+    <li>Driveline</li>
+    <li>Steering</li>
+    <li>Suspension Experience</li>
+    <li>Air Brake</li>
+    <li>Clutch / Flywheel R&R</li>
+    <li>Ultrashift & Endurant</li>
+    <li>Overhead Roll-Up Doors</li>
+    <li>Oil Change</li>
+    <li>Wheel Alignment</li>
+    <li>Hydraulics</li>
+    <li>Safety Compliance</li>
+    <li>Customer Service</li>
+    <li>Problem Solving</li>
+    <li>Communication Skills</li>
+    <li>Time Management</li>
+    <li>Inventory Management</li>
+    <li>Team Leadership</li>
+  </ul>
+</section>
 
   <section id="timeline" class="section">
     <h2>War Record</h2>
