--- a/index.html
+++ b/index.html
@@ -15,6 +15,40 @@
       <h1 class="glitch" data-text="Rob Roman">Rob Roman</h1>
       <p class="tagline">Fleet Surgeon · Metal Alchemist · 24/7 Mobile Rescue</p>
       <a href="#contact" class="btn">Haul Me In</a>
+      <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
+<script>
+  /* paste this line in verbatim */
+  window.formbutton=window.formbutton||function(){(formbutton.q=formbutton.q||[]).push(arguments)};
+  /* customize formbutton below*/     
+  formbutton("create", {
+    action: "https://formspree.io/f/mwpgrype",
+    title: "How can we help?",
+    fields: [
+      { 
+        type: "email", 
+        label: "Email:", 
+        name: "email",
+        required: true,
+        placeholder: "your@email.com"
+      },
+      {
+        type: "textarea",
+        label: "Message:",
+        name: "message",
+        placeholder: "What's on your mind?",
+      },
+      { type: "submit" }      
+    ],
+    styles: {
+      title: {
+        backgroundColor: "gray"
+      },
+      button: {
+        backgroundColor: "gray"
+      }
+    }
+  });
+</script>
     </div>
   </header>
 
