--- a/index.html
+++ b/index.html
@@ -2,45 +2,74 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Rob Roman – Diesel Technician</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&family=Exo+2:wght@700&display=swap" rel="stylesheet">
+  <style>
+    :root{--accent:#00ff80;--bg:#0d0d0d;--card:#111;--text:#e0e0e0;--light:#f4f4f4;}
+    *{margin:0;padding:0;box-sizing:border-box;font-family:system-ui,Segoe UI,Roboto,sans-serif;}
+    body{background:var(--bg);color:var(--text);line-height:1.6;}
+    a{color:var(--accent);text-decoration:none;}
+    .container{width:90%;max-width:900px;margin:auto;padding:2rem 0;}
+    h1,h2,h3{letter-spacing:.5px;}
+    /* NAV */
+    header{padding:1rem 0;background:#000;}
+    nav{display:flex;justify-content:space-between;align-items:center;}
+    .logo{font-size:1.5rem;font-weight:700;color:var(--accent);}
+    nav ul{list-style:none;display:flex;gap:1rem;}
+    /* HERO */
+    .hero{text-align:center;padding:4rem 0;background:radial-gradient(circle,rgba(0,255,128,.15) 0,transparent 70%);}
+    .hero h1{font-size:3rem;margin-bottom:.5rem;}
+    .btn{display:inline-block;background:var(--accent);color:#000;padding:.75rem 1.5rem;border-radius:6px;font-weight:600;margin-top:1rem;}
+    /* SECTIONS */
+    section{padding:3rem 0;}
+    .bg-light{background:var(--light);color:#111;}
+    /* SKILLS */
+    .skills{display:grid;grid-template-columns:repeat(auto-fit,minmax 140px,1fr);gap:.5rem;list-style:none;}
+    .skills li{background:var(--card);border:1px solid var(--accent);padding:.4rem .6rem;border-radius:4px;text-align:center;font-size:.85rem;}
+    /* TIMELINE */
+    .timeline{border-left:2px solid var(--accent);padding-left:1.2rem;margin-left:1rem;}
+    .job{margin-bottom:2rem;}
+    .job h3{margin-bottom:.25rem;}
+    .date{font-size:.8rem;opacity:.7;}
+    /* CONTACT */
+    form{display:flex;flex-direction:column;gap:1rem;max-width:500px;margin-top:1rem;}
+    input,textarea{padding:.7rem;border:1px solid #555;background:#111;color:var(--text);border-radius:4px;}
+    footer{text-align:center;padding:2rem 0;font-size:.8rem;opacity:.6;}
+    @media(max-width:600px){.hero h1{font-size:2rem;}nav ul{gap:.5rem;font-size:.9rem;}}
+  </style>
 </head>
 <body>
-  <header class="hero">
-    <nav class="nav">
-      <a href="#top" class="logo">RR</a>
-      <ul class="nav-links">
+  <header>
+    <nav class="container">
+      <div class="logo">RR</div>
+      <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="#experience">Experience</a></li>
+        <li><a href="#exp">Experience</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <div class="hero-text">
+    <div class="hero container">
       <h1>Rob Roman</h1>
       <p>Heavy-Duty & Automotive Technician | Youngstown, OH</p>
       <a href="#contact" class="btn">Get In Touch</a>
     </div>
   </header>
 
-  <section id="about" class="section">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>
-        ASE-level diesel technician with 10 years diagnosing, repairing, and fabricating
-        everything from Class-8 tractors to municipal fire apparatus. I cut fleet downtime
-        through preventive maintenance and custom fabrication, wielding MIG, TIG, and plasma
-        torches as easily as diagnostic laptops.
-      </p>
-    </div>
+  <section id="about" class="container">
+    <h2>About Me</h2>
+    <p>
+      ASE-level diesel technician with 10 years diagnosing, repairing, and fabricating
+      everything from Class-8 tractors to municipal fire apparatus. I cut fleet downtime
+      through preventive maintenance and custom fabrication, wielding MIG, TIG, and plasma
+      torches as easily as diagnostic laptops.
+    </p>
   </section>
 
-  <section id="skills" class="section bg-light">
+  <section id="skills" class="bg-light">
     <div class="container">
       <h2>Skills</h2>
-      <ul class="skill-grid">
+      <ul class="skills">
         <li>Alignment</li><li>Automotive Diagnostics</li><li>Fabrication</li>
         <li>Gas Welding / Brazing</li><li>MIG Welding</li><li>ARC Welding</li>
         <li>Soldering</li><li>Plasma Cutting</li><li>CNC & Machining</li>
@@ -55,58 +84,50 @@
     </div>
   </section>
 
-  <section id="experience" class="section">
-    <div class="container">
-      <h2>Experience</h2>
-      <div class="timeline">
-        <div class="job">
-          <h3>FedEx Freight — Fleet Maintenance Technician</h3>
-          <span class="date">2021 – 2025  |  North Jackson, OH</span>
-          <ul>
-            <li>Maintained 300+ Class-8 tractors & pups (Peterbilt, Kenworth, Volvo, Freightliner, International).</li>
-            <li>Overhauled DD13, ISX15, ISL9, ISQ7 engines; replaced clutches, Ultrashift & Endurant transmissions.</li>
-            <li>Rebuilt air systems, differentials, suspensions, roll-up doors; patched corroded housings.</li>
-            <li>Used JPro, Cummins INSITE, Eaton ServiceRanger, Bendix ACOM daily for fault tracing.</li>
-          </ul>
-        </div>
+  <section id="exp" class="container">
+    <h2>Experience</h2>
+    <div class="timeline">
+      <div class="job">
+        <h3>FedEx Freight – Fleet Maintenance Technician</h3>
+        <p class="date">2021 – 2025  |  North Jackson, OH</p>
+        <ul>
+          <li>Maintained 300+ Class-8 tractors & pups (Peterbilt, Kenworth, Volvo, Freightliner, International).</li>
+          <li>Overhauled DD13, ISX15, ISL9, ISQ7 engines; replaced clutches, Ultrashift & Endurant transmissions.</li>
+          <li>Rebuilt air systems, differentials, suspensions, roll-up doors; patched corroded housings.</li>
+          <li>Used JPro, Cummins INSITE, Eaton ServiceRanger, Bendix ACOM daily for fault tracing.</li>
+        </ul>
+      </div>
 
-        <div class="job">
-          <h3>Fred Martin Ford — Automotive / Medium-Duty Technician</h3>
-          <span class="date">2019 – 2021  |  Youngstown, OH</span>
-          <ul>
-            <li>Flat-rate repairs on gas & diesel cars, vans, F-550/F-650 chassis; zero comebacks.</li>
-          </ul>
-        </div>
+      <div class="job">
+        <h3>Fred Martin Ford – Automotive / Medium-Duty Technician</h3>
+        <p class="date">2019 – 2021  |  Youngstown, OH</p>
+        <ul><li>Flat-rate repairs on gas & diesel cars, vans, F-550/F-650 chassis; zero comebacks.</li></ul>
+      </div>
 
-        <div class="job">
-          <h3>Boardman Twp Road & Fire — Fleet Technician</h3>
-          <span class="date">2018 – 2019  |  Boardman, OH</span>
-          <ul>
-            <li>Diagnosed and fabricated custom solutions for police, fire, and road-department vehicles.</li>
-            <li>Reduced downtime through PM schedules and on-site welding/fabrication.</li>
-          </ul>
-        </div>
+      <div class="job">
+        <h3>Boardman Twp Road & Fire – Fleet Technician</h3>
+        <p class="date">2018 – 2019  |  Boardman, OH</p>
+        <ul>
+          <li>Diagnosed and fabricated custom solutions for police, fire, and road-department vehicles.</li>
+          <li>Reduced downtime through PM schedules and on-site welding/fabrication.</li>
+        </ul>
+      </div>
 
-        <div class="job">
-          <h3>Taylor Kia — Auto Technician</h3>
-          <span class="date">2015 – 2018  |  Boardman, OH</span>
-          <ul>
-            <li>Promoted from lube tech to flat-rate; performed A/B/C-level repairs on all makes.</li>
-          </ul>
-        </div>
+      <div class="job">
+        <h3>Taylor Kia – Auto Technician</h3>
+        <p class="date">2015 – 2018  |  Boardman, OH</p>
+        <ul><li>Promoted from lube tech to flat-rate; performed A/B/C-level repairs on all makes.</li></ul>
+      </div>
 
-        <div class="job">
-          <h3>Self-Employed — Mobile Mechanic / Welder</h3>
-          <span class="date">2015 – Present  |  Youngstown, OH</span>
-          <ul>
-            <li>24/7 roadside and on-site repair & welding; built loyal customer base through speed and transparency.</li>
-          </ul>
-        </div>
+      <div class="job">
+        <h3>Self-Employed – Mobile Mechanic / Welder</h3>
+        <p class="date">2015 – Present  |  Youngstown, OH</p>
+        <ul><li>24/7 roadside and on-site repair & welding; built loyal customer base through speed and transparency.</li></ul>
       </div>
     </div>
   </section>
 
-  <section id="contact" class="section bg-light">
+  <section id="contact" class="bg-light">
     <div class="container">
       <h2>Contact</h2>
       <p>Need a truck back on the road? Email, call, or use the form below.</p>
@@ -116,7 +137,7 @@
         <textarea name="message" placeholder="Tell me what broke..." required></textarea>
         <button class="btn" type="submit">Send Message</button>
       </form>
-      <ul class="contact-list">
+      <ul class="contact-list" style="margin-top:1.5rem;list-style:none;">
         <li>📧 <a href="mailto:ytowndown616@gmail.com">ytowndown616@gmail.com</a></li>
         <li>📞 <a href="tel:3303330016">330-333-0016</a></li>
         <li>📍 Youngstown, OH — Will travel</li>
@@ -125,13 +146,9 @@
   </section>
 
   <footer>
-    <div class="container">
-      &copy; <span id="year"></span> Rob Roman. Built for diesel lovers.
-    </div>
+    <div class="container">&copy; <span id="y"></span> Rob Roman – Built for diesel lovers</div>
   </footer>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
