--- a/index.html
+++ b/index.html
@@ -96,12 +96,21 @@
 
   <section id="contact">
     <h2>Light the Beacon</h2>
-    <form action="https://formspree.io/f/xwkgwklw" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Tell me what broke..." required></textarea>
-      <button class="btn" type="submit">Send S.O.S.</button>
-    </form>
+   <form
+  action="https://formspree.io/f/mwpgrype"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
     <p style="text-align:center;margin-top:1.5rem">
       📧 ytowndown616@gmail.com | 📞 330-333-0016 | 📍 Youngstown, OH — Will travel
     </p>
